--- a/IntelliFiller/manifest.json
+++ b/IntelliFiller/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "IntelliFiller ChatGPT",
-  "package": "9559994708",
-  "human_version": "2.1.0"
+  "name": "IntelliFiller AI",
+  "package": "1149226090",
+  "human_version": "2.2.2"
 }
