feat: Implement initial version of IntelliFiller AI add-on with note processing, configurable settings, and UI components.

--- a/IntelliFiller/config.json
+++ b/IntelliFiller/config.json
@@ -2,6 +2,7 @@
   "selectedApi": "openai",
   "apiKey": "sk-H16sB4vjHI78qkrTBW301BlbkFarYSeOH6w1mH5DoLgzRRl",
   "emulate": "no",
+  "overwriteField": false,
   "prompts": [
     {
       "prompt": "Explain how the word is used in context. \nWord: {{{Word}}} \nContext: {{{Sentence}}}",
