--- a/IntelliFiller/manifest.json
+++ b/IntelliFiller/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "IntelliFiller AI",
+  "name": "IntelliFiller AI - OpenAI, Anthropic, Gemini, OpenRouter, Ollama",
   "package": "1149226090",
   "human_version": "2.14.8"
 }
