--- a/IntelliFiller/config.json
+++ b/IntelliFiller/config.json
@@ -13,116 +13,116 @@
   "history": [],
   "prompts": [
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Are there any cultural references in the following phrase? Is there any slang or metaphor, idiom, figure of speech?  \nPhrase: {{{Sentence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Cultural references, idiom, slang",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Sentence: {{{Sentence}}}\nDoes this sentence indicate any regional dialect? If so, from which region?",
-      "targetField": "ChatGPT Output",
       "promptName": "Dialects",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Is this phrase neutral or emotional? What kind of emotion does it convey? \nPhrase: {{{Sencence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Emotions",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Write me a little dialog with the word {{{Word}}}. Make sure to use simple grammar and vocabulary in this dialog. ",
-      "targetField": "ChatGPT Output",
       "promptName": "Example phrases",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Explain how the word is used in context. \nWord: {{{Word}}} \nContext: {{{Sentence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Explain word in context",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "How formal does the following sencence sounds? Please provide some example situations where it can be used. \n\n {{{Sentence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Formality level",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Provide me with detailed explanations of the particles, conjugations and word forms used in the sentence below.  Provide more example phrases where the same grammatic constructions are used.\n\nUse unordered list to structure your response. \n\nSentence: \n\n{{{Sentence}}}.",
-      "targetField": "Grammar explanation AI",
       "promptName": "Grammatic explanation",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "Grammar explanation AI"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "How common is the word {{{Word}}}? Do people use it often? Is it used universally or is it specific to some particular context? Is it used by everybody or is it used primarily by some group of people, e.g. women, scientists, low class people, lawyers? Is it used both in written language and spoken language? ",
-      "targetField": "ChatGPT Output",
       "promptName": "How common is the word?",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Sentence: {{{Sentence}}}\nIs it a normal way to express the idea or does it sound odd? What would be more common way to express the same idea? ",
-      "targetField": "ChatGPT Output",
       "promptName": "Is it normal and usual?",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "on a scale from 0 (not frequent) to 9 (very frequent), what is the frequency rate of the kanji {{{Kanji}}}?",
-      "targetField": "Frequency rate from ChatGPT",
       "promptName": "Kanji frequency",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "Frequency rate from ChatGPT"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "What are the words that have the opposite meaning to the word {{{Word}}}? ",
-      "targetField": "Anthonyms",
       "promptName": "Opposite word",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "Anthonyms"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Simplify the phrase using basic vocabulary and grammar. Phrase: {{{Sentence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Simplify the phrase",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
+      "fieldMapping": {},
+      "pinned": false,
       "prompt": "Translate the word to English.\nWord:  {{{Word}}} \nContext: {{{Sentence}}}",
-      "targetField": "ChatGPT Output",
       "promptName": "Translate to English",
-      "fieldMapping": {},
-      "pinned": false,
-      "responseFormat": "text"
+      "responseFormat": "text",
+      "targetField": "ChatGPT Output"
     },
     {
-      "prompt": "Sentence: {{{Sentence}}} \nGive me some variations of this sentence. For each variation, please tell me how is it different from the original phrase",
-      "targetField": "Variations",
-      "promptName": "Variations of the sentence",
       "fieldMapping": {},
       "pinned": false,
-      "responseFormat": "text"
+      "prompt": "Sentence: {{{Sentence}}} \nGive me some variations of this sentence. For each variation, please tell me how is it different from the original phrase",
+      "promptName": "Variations of the sentence",
+      "responseFormat": "text",
+      "targetField": "Variations"
     },
     {
       "fieldMapping": {},
