--- a/IntelliFiller/config.json
+++ b/IntelliFiller/config.json
@@ -1,6 +1,16 @@
 {
   "selectedApi": "openai",
-  "apiKey": "sk-H16sB4vjHI78qkrTBW301BlbkFarYSeOH6w1mH5DoLgzRRl",
+  "apiKey": "",
+  "anthropicKey": "",
+  "geminiKey": "",
+  "openrouterKey": "",
+  "customUrl": "",
+  "customKey": "",
+  "openaiModel": "",
+  "anthropicModel": "",
+  "geminiModel": "",
+  "openrouterModel": "",
+  "customModel": "",
   "emulate": "no",
   "overwriteField": false,
   "maxFavorites": 3,
