--- a/IntelliFiller/config.json
+++ b/IntelliFiller/config.json
@@ -14,6 +14,7 @@
   "emulate": "no",
   "overwriteField": false,
   "maxFavorites": 3,
+  "netTimeout": 60,
   "batchProcessing": {
     "enabled": true,
     "batchSize": 20,
